# generative_splines

./: Cargo.toml  README.md
src/: main.rs  screen.rs  spl.rs
