[package]
name = "spline"
version = "0.1.0"
authors = ["Oleh Luchkiv <olesho@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "*"
ndarray = "*"
ndarray-rand ="*"
peroxide = "*"
rand = "*"
cubic_spline = "*"

# [toolchain.optional]
# rust-std = ["x86_64-pc-windows-gnu"]

# [target.x86_64-pc-windows-gnu]
# linker = "/usr/bin/x86_64-w64-mingw32-gcc"
